[project]
name = "u-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dominik Galus", email = "dominikgalus9@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.6.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
